<resources>
    <string name="app_name">InventarioReal-Admin</string>
    <string name="splash_image">Splash Image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="collaborative">Password</string>
    <string name="error_login">Error al intentar ingresar</string>
    <string name="menu">menu</string>
    <string name="inventory">Inventario</string>
    <string name="inventario_cooperativo">Inventario Cooperativo</string>
    <string name="transferencias">Transferencias</string>
    <string name="devolutions">Devoluciones</string>
    <string name="reportes">Reportes</string>
    <string name="usuarios">Usuarios</string>
    <string name="busqueda_y_georeferenciacion">Busqueda</string>
    <string name="salir">Salir</string>
    <string name="ean_plu">EAN/PLU</string>
    <string name="desea_continuar">Desea continuar?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="codigo">Codigo</string>
    <string name="imagen_del_producto">Imagen del product</string>
    <string name="ingresando">Ingresando</string>
    <string name="consultando">Consultando</string>
    <string name="buscar">Buscar</string>
    <string name="ingresar_mercancia">Ingresar Mercancia</string>
    <string name="tag_leidos">Tag Leidos</string>
    <string name="create_inventory">Crear \nInventario Parcial</string>
    <string name="create_inventory_2">Crear Inventario Parcial</string>
    <string name="consolidate_inventories">Consolidar \nInventarios Parciales</string>
    <string name="view_inventories_by_zone">Visualizar inventarios parciales por zona</string>
    <string name="view_consolidated_inventories">Visualizar inventarios parciales consolidados</string>
    <string name="local">Local</string>
    <string name="zona">Zona</string>
    <string name="poder_lectura">Poder de lectura</string>
    <string name="iniciar">Iniciar</string>
    <string name="finalizar">Finalizar</string>
    <string name="log_out">Cerrar sesion</string>
    <string name="title_activity_crear_inventario">Crear Inventario</string>
    <string name="total">Total</string>
    <string name="eanPlu">Ean/Plu</string>
    <string name="epc">Epc</string>
    <string name="action_settings">Settings</string>
    <string name="visual">Visual</string>
    <string name="fecha_del_inventario">Fecha del Inventario</string>
    <string name="create_cooperative_inventory">Crear Inv Cooperativo</string>
    <string name="join_cooperative_inventory">Unirse Inventario Cooperativo</string>
    <string name="consolidate_cooperative_inventories">Consolidar Inv cooperativos</string>
    <string name="title_activity_home_transferencia">HomeTransferencia</string>
    <string name="ME">M.E</string>
    <string name="recibido">Recibido</string>
    <string name="enviado">Enviado</string>
    <string name="enviar_email">Enviar email</string>
    <string name="enviados">Enviados</string>
    <string name="recibidos">Recibidos</string>
    <string name="faltantes">Faltantes</string>
    <string name="fecha_de_transferencia">Fecha de transferencia</string>
    <string name="local_destino">Local Destino</string>
    <string name="generado_por">Generado por:</string>
    <string name="message">Mensaje</string>
    <string name="inventario_total">Inventario Total</string>
    <string name="inventario_eanplu">Inventario EAN/PLU</string>
    <string name="diferencias_inventarios_fisicos">Diferencias inventarios fisicos</string>
    <string name="diferencias_inventarios_fisicos_inventarios_erp"><![CDATA[Diferencias inventarios fisicos & inventarios ERP]]></string>
    <string name="homologar_diferencias_inventario_fisico">Homologar Diferencia de inventarios fisicos</string>
    <string name="unidades_vendidas">Unidades vendidas</string>
    <string name="rotacion_inventario">Rotacion inventario</string>
    <string name="devoluciones_clientes">Devoluciones clientes</string>
    <string name="devoluciones_proveedores">Devoluciones Proveedores</string>
    <string name="rotacion_proyectada">Rotacion Proyectada</string>
    <string name="view_cooperative_inventories_by_zone">Visualizar inventarios cooperativos por zona</string>
    <string name="view_cooperative_inventories_consolidated">Visualizar inventarios cooperativos consolidados</string>
    <string name="salida_mercancia">Salida de Mercancia</string>
    <string name="id">Id</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="escoger_fecha">Escoger fecha</string>
    <string name="fecha_final">Fecha final</string>
    <string name="ver_reporte">Ver Reporte</string>
    <string name="vendidas">Vendidas</string>
    <string name="diferencia">Diferencia</string>
    <string name="proveedor">Proveedor</string>
    <string name="total_unidades_sugeridas">Total Unidades sugeridas</string>
    <string name="busqueda_items_listar_ubicaciones">Ean / Plu - Listar Ubicaciones</string>
    <string name="buscar_sonar_ean">Buscar Ean / Plu - Sonar</string>
    <string name="buscar_sonar_epc">Buscar Epc (RFID) Sonar</string>
    <string name="buscar_epc_ultima_ubicacion">Buscar Epc (RFID) Ultima ubicacion conocida</string>
    <string name="ver_otro">Ver otro</string>
    <string name="unidades">Unidades</string>
    <string name="borrar">Borrar</string>
    <string name="error_inventarios_de_la_misma_zona">No se pueden escoger inventarios de la misma zona</string>
    <string name="error_inventario_no_seleccionado">No se seleccionaron inventarios</string>
    <string name="error_productos_no_vender">Hay productos que no se pueden vender</string>
    <string name="detener">Detener</string>
    <string name="leer">Leer</string>
    <string name="sacar_producto">Sacar Productos</string>
    <string name="guardar">Guardar</string>
    <string name="salida_mercancia_exitosa">Salida de mercancia realizada exitosamente</string>
    <string name="salida_mercancia_error">Error al sacar la mercancia</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_mercancia">Agregar Mercancia</string>
    <string name="error_G06">Codigo EAN/PLU no existe</string>
    <string name="se_debe_buscar_un_producto">Se debe buscar un producto</string>
    <string name="error_tags_no_validos">Algunos tags no se pueden usar, por favor valida la informacion</string>
    <string name="productos_agregados_exito">Productos agregados con exito</string>
    <string name="error_no_tags">Se debe agregar al menos un tag</string>
    <string name="devoluciones">Devoluciones</string>
    <string name="error_devolver_producto">Producto actualmente en inventario, no se puede reintegrar</string>
    <string name="error_epc_no_encontrado">Epc no encontrado</string>
    <string name="crear_devolucion">Crear devolucion</string>
    <string name="productos_devueltos_exito">Productos devueltos con exito</string>
    <string name="productos_devueltos_error">Productos no se pudieron devolver</string>
    <string name="consolidar_inventario_cooperativo">Consolidar Inv Cooperativos</string>
    <string name="cooperativo">Cooperativo</string>
    <string name="inventarios_consolidados_exito">Inventarios consolidados con exito</string>
    <string name="crear_inventario_cooperativo">Crear Inv Cooperativo</string>
    <string name="revisar_los_datos">Revisa los datos</string>
    <string name="unirse_inventario_cooperativo">Unirse Inv Cooperativo</string>
    <string name="error_minimo_un_producto">Debes leer al menos 1 producto</string>
    <string name="modificar_inventario_cooperativo">Modificar inventario cooperativo</string>
    <string name="seleccione_inventario_unirse">Selecciones el inventario a unirse</string>
    <string name="visualizar_inventario_cooperativo_por_zonas">Visualizar Inv Cooperativos Por Zonas</string>
    <string name="seleccione_inventario_a_visualizar">Seleccione inventario a visualizar</string>
    <string name="visualizar_inventario_cooperativo_consolidado">Visualizar Inv Cooperativo Consolidado</string>
    <string name="no_implementado">Aun no se ha implementado</string>
    <string name="crear_inventario_parcial">Crear Inv Parcial</string>
    <string name="inventario_creado_exito">Inventario Creado con exito</string>
    <string name="inventario_creado_error">Error creando inventario</string>
    <string name="visualizar_inventarios_parciales_consolidados">Visualizar Inventarios Consolidados</string>
    <string name="visualizar_inventarios_parciales_por_zonas">Visualizar inventario parciales por zonas</string>
    <string name="inventarios">Inventarios</string>
    <string name="reporte_diferencia_inventario_erp">Reporte Diferencia Inventario Erp</string>
    <string name="unidades_no_encontradas">Unidades no encontradas</string>
    <string name="fecha">Fecha</string>
    <string name="selecciones_inventory_inicial">Selecciones el inventory Inicial</string>
    <string name="selecciones_inventory_final">Seleccione el inventario final</string>
    <string name="reporte_creado_exito">Reporte creado con exito</string>
    <string name="reporte_creado_error">Reporte no pudo ser creado</string>
    <string name="error_se_deben_seleccionar_dos_inventarios">Se deben seleccionar los dos inventarios</string>
    <string name="error_se_deben_seleccionar_inventario_diferentes">Se deben seleccionar inventarios diferentes</string>
    <string name="error_inventario_final_posterior_inicial">El inventario final debe ser posterior al inicial</string>
    <string name="seleccione_reporte">Seleccione reporte</string>
    <string name="reporte_actualizado_exito">Reporte actualizado con exito</string>
    <string name="reporte_actualizado_error">Error actualizando el reporte</string>
    <string name="error_sin_informacion">No hay informacion para enviar</string>
    <string name="reporte_inventario_ean_plu">Reporte Inventarios Ean/Plu</string>
    <string name="reporte_inventario_total">Reporte Inventario Total</string>
    <string name="error_se_deben_seleccionar_todos_los_datos">Se deben seleccionar todos los datos</string>
    <string name="error_fecha_final_superior">La fecha final debe ser posterior a la inicial</string>
    <string name="reporte_devolucion_clientes">Reporte Devolucion Clientes</string>
    <string name="reporte_devolucion_proveedores">Reporte Devolucion Proveedores</string>
    <string name="reporte_rotacion_proyectada">Reporte Rotacion Proyectada</string>
    <string name="reporte_rotacion_unidades">Reporte Rotacion de unidades</string>
    <string name="unidades_devueltas">Unidades devueltas</string>
    <string name="reporte_unidades_vendidas">Reporte unidades vendidas</string>
    <string name="busqueda_items_ean_plu_sonar">Busqueda de items - Ean/Plu Sonar</string>
    <string name="total_unidades">Total Unidades</string>
    <string name="busqueda_items_epc_ultima_ubicacion">Busqueda de items - Epc Ultima ubicacion</string>
    <string name="error_minimo_un_epc">Debes buscar al menos un EPC</string>
    <string name="busqueda_items_ean_plu_listado">Busqueda de items - Ean/Plu Listado</string>
    <string name="busqueda_items">Busqueda de items</string>
    <string name="crear_transferencia">Crear Transferencia</string>
    <string name="local_origen">Local Origen</string>
    <string name="transferencia_exito">Transferencia creada con exito</string>
    <string name="transferencia_error">Error intentando realizar la transferencia</string>
    <string name="detalles_manifiesto_electronico">Detalles manifiesto electronico</string>
    <string name="manifiesto_electronico">Manifiesto Electronico</string>
    <string name="total_fisico">Total fisico</string>
    <string name="total_erp">Total erp</string>
    <string name="detalles">Detalles</string>
    <string name="description">Descripcion</string>
    <string name="homologar_diferencia">Homologar diferencias</string>
</resources>