<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Version" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="User" />

    <TextView
        android:id="@+id/txtShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Shop" />

    <Button
        android:id="@+id/btnIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar_mercancia" />

    <Button
        android:id="@+id/btnSalMer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salida_mercancia" />

    <Button
        android:id="@+id/btnInv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory" />

    <Button
        android:id="@+id/btnInvCoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventario_cooperativo" />

    <Button
        android:id="@+id/btnTrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transferencias" />

    <Button
        android:id="@+id/btnDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devolutions" />

    <Button
        android:id="@+id/btnUsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuarios" />

    <Button
        android:id="@+id/btnBusYGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/busqueda_y_georeferenciacion" />

    <Button
        android:id="@+id/btnRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportes" />

    <Button
        android:id="@+id/btnSal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>