<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_cooperative_inventory" />

    <Button
        android:id="@+id/btnUni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_cooperative_inventory" />

    <Button
        android:id="@+id/btnCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consolidate_cooperative_inventories" />

    <Button
        android:id="@+id/btnVisPorZon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_cooperative_inventories_by_zone" />

    <Button
        android:id="@+id/btnVisCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_cooperative_inventories_consolidated" />

</LinearLayout>