<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleIcn"
            style="@style/title_icn"
            app:srcCompat="@drawable/icn_inventory_create_blue_dark" />

        <TextView
            android:id="@+id/titleTxt"
            style="@style/title_text_blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_inventory_2" />
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        style="@style/MyCustomTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eanPlu" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epc" />


    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/lnl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCan"
                style="@style/button_blue_small"
                android:layout_weight="1"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/btnLee"
                style="@style/button_blue_small"
                android:layout_weight="1"
                android:text="@string/leer" />

            <Button
                android:id="@+id/btnFin"
                style="@style/button_blue_small"
                android:layout_weight="1"
                android:text="@string/finalizar" />

            <Button
                android:id="@+id/btnBor"
                style="@style/button_blue_small"
                android:layout_weight="1"
                android:text="@string/borrar" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>