<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            style="@style/editContainer"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEanPlu"
                style="@style/edit"
                android:hint="@string/ean_plu" />

            <ImageView
                android:id="@+id/icn2"
                style="@style/icnRight"
                app:srcCompat="@drawable/icn_search" />
        </RelativeLayout>

        <Button
            style="@style/button_blue_dark"
            android:layout_marginTop="10dp"
            android:id="@+id/btnBus"
            android:layout_weight="1"
            android:text="@string/buscar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblDes1"
            style="@style/labelContainer"
            android:hint="@string/description" />

        <TextView
            android:id="@+id/lblDes2"
            style="@style/labelContainer"
            android:hint="@string/description" />

        <TextView
            android:id="@+id/lblDes3"
            style="@style/labelContainer"
            android:hint="@string/description" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_del_producto"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/lnl1a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/text_link"
                    android:text="@string/zona" />

                <RelativeLayout style="@style/spinnerContainer">

                    <Spinner
                        android:id="@+id/spnZona"
                        style="@style/spinnerItem" />

                    <ImageView
                        style="@style/spinnerIcon"
                        android:src="@drawable/ic_arrow_down" />

                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/lbl2"
                style="@style/text_link"
                android:text="@string/desea_continuar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSi"
                    style="@style/button_blue_dark"
                    android:text="@string/si" />

                <Button
                    android:id="@+id/btnNo"
                    style="@style/button_blue_dark"
                    android:text="@string/no" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCan"
                style="@style/button_blue_light"
                android:layout_weight="1"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/btnEmp"
                style="@style/button_blue_light"
                android:layout_weight="1"
                android:text="@string/leer" />

            <Button
                android:id="@+id/btnGua"
                style="@style/button_blue_light"
                android:layout_weight="1"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnBor"
                style="@style/button_blue_light"
                android:layout_weight="1"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/borrar" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lst1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtTags"
            style="@style/text_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@drawable/border_top_blue_dark"
            android:text="@string/tag_leidos" />
    </LinearLayout>

</LinearLayout>