<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/listHeaderContainer"
        android:orientation="horizontal">

        <TextView
            style="@style/text_white"
            android:textStyle="bold"
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_fisico" />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtErp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/total_erp" />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtDiference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/diferencia" />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtEanPlu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/eanPlu" />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/detalles" />
</LinearLayout>