<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        style="@style/appHeaderContainer"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo2" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/titleIcn"
                style="@style/title_icn"
                app:srcCompat="@drawable/icn_transfer_blue" />

            <TextView
                android:id="@+id/titleTxt"
                style="@style/title_text_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnInvTot"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_ingresos_white_r"
                android:text="@string/inventario_total" />

            <Button
                android:id="@+id/btnInvEanPlu"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_salidas_r"
                android:text="@string/inventario_eanplu" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnDifInvFis"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_ingresos_white_r"
                android:text="@string/diferencias_inventarios_fisicos" />

            <Button
                android:id="@+id/btnDifInvFisYErp"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_salidas_r"
                android:text="@string/diferencias_inventarios_fisicos_inventarios_erp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnHomDifInvFis"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_ingresos_white_r"
                android:text="@string/homologar_diferencia" />

            <Button
                android:id="@+id/btnUniVen"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_salidas_r"
                android:text="@string/unidades_vendidas" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRotInv"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_ingresos_white_r"
                android:text="@string/rotacion_inventario" />

            <Button
                android:id="@+id/btnDevCli"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_salidas_r"
                android:text="@string/devoluciones_clientes" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnDevPro"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_ingresos_white_r"
                android:text="@string/devoluciones_proveedores" />

            <Button
                android:id="@+id/btnRotPro"
                style="@style/button_blue"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/icn_salidas_r"
                android:text="@string/rotacion_proyectada" />


        </LinearLayout>


    </LinearLayout>



</LinearLayout>