<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/listHeaderContainer"
    android:orientation="horizontal">

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtEnv"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/enviados"
         />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtRec"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/recibidos"
         />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txtEan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/eanPlu"
         />

    <TextView
        style="@style/text_white"
        android:textStyle="bold"
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/detalles"
         />

</LinearLayout>